v0.0.1alpha/_sources/_as_gen/uvex_transients.transients.supernovae.TypeIcSNe.rst.txt
TypeIcSNe
===============================================

.. currentmodule:: uvex_transients.transients.supernovae

.. autoclass:: uvex_transients.transients.supernovae.TypeIcSNe

   

   
   .. rubric:: Methods

   .. autosummary::
      :toctree:
      :recursive:
   
      ~TypeIcSNe.event_rate
      ~TypeIcSNe.registry
      ~TypeIcSNe.sample_event_count
      ~TypeIcSNe.sample_event_redshift
      ~TypeIcSNe.sample_events_on_healpix_grid
   
   

   
   
   .. rubric:: Attributes

   .. autosummary::
      :toctree:
      :recursive:
   
      ~TypeIcSNe.DEFAULT_DURATION
      ~TypeIcSNe.DEFAULT_Z_GRID_SIZE
      ~TypeIcSNe.DEFAULT_Z_LIM
      ~TypeIcSNe.cosmology
      ~TypeIcSNe.duration_limit
      ~TypeIcSNe.integrated_event_rate
      ~TypeIcSNe.luminosity_distance_grid
      ~TypeIcSNe.redshift_grid
      ~TypeIcSNe.redshift_grid_size
      ~TypeIcSNe.redshift_limit
      ~TypeIcSNe.sed
   
   