v0.0.6alpha/_sources/_as_gen/uvex_transients.transients.supernovae.TypeIcSNe.rst.txt
TypeIcSNe
===============================================

.. currentmodule:: uvex_transients.transients.supernovae

.. autoclass:: uvex_transients.transients.supernovae.TypeIcSNe

   

   
   .. rubric:: Methods

   .. autosummary::
      :toctree:
      :recursive:
   
      ~TypeIcSNe.compute_all_sky_yield
      ~TypeIcSNe.compute_all_sky_yield_ci
      ~TypeIcSNe.event_rate
      ~TypeIcSNe.rate_shape
      ~TypeIcSNe.registry
      ~TypeIcSNe.sample_event_count
      ~TypeIcSNe.sample_event_redshift
      ~TypeIcSNe.sample_events_on_healpix_grid
   
   

   
   
   .. rubric:: Attributes

   .. autosummary::
      :toctree:
      :recursive:
   
      ~TypeIcSNe.DEFAULT_DURATION
      ~TypeIcSNe.DEFAULT_Z_GRID_SIZE
      ~TypeIcSNe.DEFAULT_Z_LIM
      ~TypeIcSNe.RATE_CI
      ~TypeIcSNe.RATE_FRACTION
      ~TypeIcSNe.all_sky_rate
      ~TypeIcSNe.all_sky_rate_ci
      ~TypeIcSNe.cosmology
      ~TypeIcSNe.duration_limit
      ~TypeIcSNe.effective_volume
      ~TypeIcSNe.integrated_rate
      ~TypeIcSNe.integrated_rate_ci
      ~TypeIcSNe.luminosity_distance_grid
      ~TypeIcSNe.rate
      ~TypeIcSNe.rate_ci
      ~TypeIcSNe.redshift_grid
      ~TypeIcSNe.redshift_grid_size
      ~TypeIcSNe.redshift_limit
      ~TypeIcSNe.sed
   
   